--- a/themes/style/sass/style.scss
+++ b/themes/style/sass/style.scss
@@ -1,16 +1,31 @@
-.shuoshuo{
-  cursor: pointer;
-  i:hover{
-    color: blue;}
-}
+*{
+  margin: 0;
+  padding:0;
 
-a{
-  &:link {text-decoration:none;}
-  &:visited {text-decoration:none;
-    color:blue;}
-  &:hover {text-decoration:underline;
-    color: red;}
-  &:active {text-decoration:underline;}
- }
-p{}
-div{}
+  a{
+    color: black;
+    text-decoration: none;
+    &:hover {
+      color: red;
+      text-decoration: underline;
+    }
+    &:visited{
+      color: blue;
+    }
+  }
+
+  .left{
+    float:left;
+  }
+  .right{
+    float:right;
+  }
+  .clearb{
+    clear:both;
+  }
+  .clearl{
+    clear:left;
+  }
+}
+@import "header";
+@import "shuoshuo";
